# convertale

./: .env.example  .env.local  .gitignore  DESIGN.md  QWEN_API_FIX_SUMMARY.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tailwind.config.ts
.next/: _events_10820.json  _events_11180.json  _events_17596.json  _events_19964.json  _events_28548.json
.next/dev/: lock  (+5 more)
app/: globals.css  layout.tsx  page.tsx
apps/api/: .env  .env.example  Dockerfile  alembic.ini  check_connections.py  pyproject.toml  seed_workspace.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260703_0001_initial_schema.py  20260716_0002_leads_and_series_bible_fields.py
apps/api/showrunner_api/: auth.py  config.py  llm_client.py  main.py  pipeline.py  worker.py
apps/api/showrunner_api/agents/: base.py
apps/api/showrunner_api/agents/creative/: brand_brief_intake.py  writers_room.py
apps/api/showrunner_api/agents/distribution/: gate_delivery.py
apps/api/showrunner_api/agents/production/: assembly.py  storyboard.py
apps/api/showrunner_api/agents/quality/: continuity_gate.py  visual_critic.py
apps/api/showrunner_api/agents/video/: routing.py
apps/api/showrunner_api/infra/: db.py  neo4j_driver.py
apps/api/showrunner_api/models/: __init__.py  core.py
apps/api/showrunner_api/routers/: brand_assets.py  campaigns.py  characters.py  gate.py  health.py  me.py  webhooks.py
apps/api/showrunner_api/services/: graph_memory.py  mcp_registry.py  series_bible.py  token_budget.py
apps/api/tests/: test_base_agent.py
(+519 files in other folders)
