[tool.poetry]
name = "convertale-api"
version = "0.1.0"
description = "FastAPI backend for Convertale — AI short-drama ad studio"
authors = ["Convertale"]
readme = "README.md"
packages = [{ include = "showrunner_api" }]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.16.0"
asyncpg = "^0.30.0"
celery = "^5.5.0"
dashscope = "^1.21.0"
fastapi = "^0.116.0"
httpx = "^0.28.0"
neo4j = "^5.28.0"
psycopg = { version = "^3.2.0", extras = ["binary"] }
pydantic = "^2.11.0"
pydantic-settings = "^2.10.0"
pyjwt = { version = "^2.10.0", extras = ["crypto"] }
python-json-logger = "^3.3.0"
redis = "^5.2.0"
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
svix = "^1.64.0"
uvicorn = { version = "^0.35.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
ruff = "^0.12.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
